--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,24 @@
     padding: 0;
     margin: 0;
 }
+#container{
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../img/fondo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#pantalla-inicio{
+    width: 100%;
+    height: 100%
+}
+#pantalla-seleccion{
+    display: none;
+    width: 100%;
+    height: 100%
+}
+#pantalla-carrera{
+    display: none;
+    width: 100%;
+    height: 100%
+}
