--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,14 @@
     width: 100%;
     height: 100%
 }
+.boton{
+    cursor: pointer;
+}
 #pantalla-carrera{
     display: none;
     width: 100%;
     height: 100%
+}
+#show-race{
+    display: none;
 }
