--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap');
 /*CREAMOS LOS COLORES BASE DE LA APLICACION*/
 :root {
     --azul: #6899fc;
     --rosa: rgb(255, 37, 208);
+    --blanco: #e4e4e4;
 }
 *{
     padding: 0;
@@ -13,10 +15,33 @@
     background-image: url(../img/fondo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    color: var(--blanco);
 }
 #pantalla-inicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 100%
+}
+#pantalla-inicio h1{
+    font-size: 13em;
+    text-align: center;
+    background: -webkit-linear-gradient(var(--rosa), var(--azul));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: var(--azul); 
+    font-family: 'Chakra Petch', sans-serif;
+    -webkit-text-stroke: 0.01em var(--blanco);
+    color: transparent; 
+}
+.boton-inicio{
+    font-size: 5em;
+    font-family: 'Chakra Petch', sans-serif;
+    animation: pressStart 2.5s infinite;
+    margin-bottom: 1em;
+    cursor: pointer;
 }
 #pantalla-seleccion{
     display: none;
@@ -33,4 +58,26 @@
 }
 #show-race{
     display: none;
+    cursor: pointer;
+}
+
+@keyframes pressStart {
+    0% {
+        transform: scale(1.2);
+        text-shadow: 5px 5px 10px var(--azul);
+    }
+    25%{
+        text-shadow: 5px 5px 10px var(--rosa);
+    }
+    50%{
+        transform: scale(0.95);
+        text-shadow: 5px 5px 10px var(--azul);
+    }
+    75%{
+        text-shadow: 5px 5px 10px var(--rosa);
+    }
+    100% {
+        transform: scale(1.2);
+        text-shadow: 5px 5px 10px var(--azul);
+    }
 }
