--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,40 @@
 }
 #pantalla-carrera{
     display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     width: 100%;
     height: 100%
 }
+.boton-empezar-carrera{
+    margin: 0;
+}
 #listado-personas-carrera{
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    align-self: flex-start;
+    width: 100%;
+    height: 90%;
+    background-color: pink  ;
+}
+.persona-carrera{
+    background-image: url("../img/angel.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    color: black;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    font-size:2em;
+    height: 6.66%;
+    margin: 0.25em;
+    cursor: default;
+    transition: 6s;
 }
 #show-race{
     display: none;
