--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,32 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: var(--blanco);
-    overflow: hidden;
+    overflow-x: hidden;
+}
+#container::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+#container::-webkit-scrollbar:vertical {
+    width:10px;
+}
+
+#container::-webkit-scrollbar-button:increment,#container::-webkit-scrollbar-button {
+    display: none;
+} 
+
+#container::-webkit-scrollbar:horizontal {
+    height: 10px;
+}
+
+#container::-webkit-scrollbar-thumb {
+    background-color: var(--rosa);
+    border-radius: 20px;
+    border: 2px solid var(--azul);
+}
+
+#container::-webkit-scrollbar-track {
+    border-radius: 10px;  
 }
 #pantalla-inicio{
     display: flex;
@@ -98,9 +123,10 @@
     margin: 2em 0;
 }
 .persona{
-    background-image: url("../img/angel.gif");
+    /* background-image: url("../img/angel.gif");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    background-color: var(--blanco);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -110,6 +136,9 @@
     height: 2.5em;
     margin: 0.25em;
     cursor: default;
+    -webkit-text-stroke: 0.05em black;
+    color: yellow; 
+    border-radius: 5em;
 }
 #pantalla-carrera{
     display: none;
@@ -126,27 +155,32 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-self: flex-start;
     width: 100%;
     height: 90%;
-    background-color: pink  ;
 }
 .persona-carrera{
-    background-image: url("../img/angel.gif");
+    text-align: right;
+    /* background-image: url("../img/angel.gif");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     color: black;
     font-weight: bold;
     align-items: center;
     justify-content: center;
-    font-size:2em;
-    height: 6.66%;
+    font-size:1.7em;
+    width: 1.6em;
+    height: 1.6em;
     margin: 0.25em;
     cursor: default;
     transition: 6s;
+    -webkit-text-stroke: 0.05em black;
+    color: yellow; 
+    border-radius: 5em;
 }
 #show-race{
     display: none;
