--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,6 @@
     margin: 2em 0;
 }
 .persona{
-    /* background-image: url("../img/angel.gif");
-    background-size: cover;
-    background-repeat: no-repeat; */
     background-color: var(--blanco);
     display: flex;
     flex-direction: column;
@@ -140,31 +137,32 @@
     color: yellow; 
     border-radius: 5em;
 }
+#show-race{
+    display: none;
+    cursor: pointer;
+}
 #pantalla-carrera{
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 .boton-empezar-carrera{
-    margin: 0;
+    margin: 0.5em 0;
 }
 #listado-personas-carrera{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-self: flex-start;
     width: 100%;
-    height: 90%;
+    height: 90vh;
 }
 .persona-carrera{
     text-align: right;
-    /* background-image: url("../img/angel.gif");
-    background-size: cover;
-    background-repeat: no-repeat; */
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -175,18 +173,19 @@
     font-size:1.7em;
     width: 1.6em;
     height: 1.6em;
-    margin: 0.25em;
     cursor: default;
     transition: 6s;
     -webkit-text-stroke: 0.05em black;
     color: yellow; 
     border-radius: 5em;
 }
-#show-race{
-    display: none;
-    cursor: pointer;
+hr{
+    width: 100%;
+    color: yellow;
+    background-color: yellow;
+    height: 0.5em;
+    margin-bottom: 0.5em;
 }
-
 @keyframes pressStart {
     0% {
         transform: scale(1.2);
