--- a/css/style.css
+++ b/css/style.css
@@ -136,60 +136,14 @@
     color: yellow; 
     border-radius: 5em;
 }
-#show-race{
+.elegida{
+    background-color: black;
+    color:rgb(255, 255, 255);
+    animation: chosen 0.5s infinite;;
+}
+#start-selection{
     display: none;
     cursor: pointer;
-}
-#pantalla-carrera{
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-}
-#start-race{
-    height: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.boton-empezar-carrera{
-    font-size: 2em;
-    margin: 0.5em 0;
-}
-#listado-personas-carrera{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-    height: 90vh;
-}
-.persona-carrera{
-    text-align: right;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-weight: bold;
-    align-items: center;
-    justify-content: center;
-    font-size:1.7em;
-    width: 1.6em;
-    height: 1.6em;
-    cursor: default;
-    transition: 6s;
-    -webkit-text-stroke: 0.05em black;
-    color: yellow; 
-    border-radius: 5em;
-}
-hr{
-    width: 100%;
-    color: yellow;
-    background-color: yellow;
-    height: 0.5em;
-    margin-bottom: 0.5em;
 }
 @keyframes pressStart {
     0% {
@@ -209,5 +163,25 @@ hr{
     100% {
         transform: scale(1.2);
         text-shadow: 5px 5px 10px var(--azul);
+    }
+}
+@keyframes chosen {
+    0% {
+        transform: scale(1.4);
+        text-shadow: 0px 0px 20px var(--azul);
+    }
+    25%{
+        text-shadow: 0px 0px 20px var(--rosa);
+    }
+    50%{
+        transform: scale(0.95);
+        text-shadow: 0px 0px 20px var(--azul);
+    }
+    75%{
+        text-shadow: 0px 0px 20px var(--rosa);
+    }
+    100% {
+        transform: scale(1.4);
+        text-shadow: 0px 0px 20px var(--azul);
     }
 }
